Bug 76167 - WebKitTestRunner should not print console message line number when it is equal to zero.
Summary: WebKitTestRunner should not print console message line number when it is equa...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Vsevolod Vlasov
URL:
Keywords:
Depends on:
Blocks: 74075
  Show dependency treegraph
 
Reported: 2012-01-12 04:21 PST by Vsevolod Vlasov
Modified: 2012-01-12 04:25 PST (History)
1 user (show)

See Also:


Attachments
Patch (1.84 KB, patch)
2012-01-12 04:23 PST, Vsevolod Vlasov
ossy: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Vsevolod Vlasov 2012-01-12 04:21:41 PST
WebKitTestRunner should not print console message line number when it is equal to zero.
Comment 1 Vsevolod Vlasov 2012-01-12 04:23:01 PST
Created attachment 122212 [details]
Patch
Comment 2 Csaba Osztrogonác 2012-01-12 04:24:37 PST
Comment on attachment 122212 [details]
Patch

LGTM,r=me.
Comment 3 Vsevolod Vlasov 2012-01-12 04:25:51 PST
Committed r104812: <http://trac.webkit.org/changeset/104812>