WebKitTestRunner should not print console message line number when it is equal to zero. https://bugs.webkit.org/show_bug.cgi?id=76167

Reviewed by Csaba Osztrogonác.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::willAddMessageToConsole):

Canonical link: https://commits.webkit.org/92974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104812 268f45cc-cd09-0410-ab3c-d52691b4dbfc