Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp
@@ -863,7 +863,11 @@ void InjectedBundlePage::willAddMessageToConsole(WKStringRef message, uint32_t l
         // FIXME: The code below does not handle additional text after url nor multiple urls. This matches DumpRenderTree implementation.
         messageString = messageString.substr(0, fileProtocolStart) + lastFileURLPathComponent(messageString.substr(fileProtocolStart));
 
-    InjectedBundle::shared().os() << "CONSOLE MESSAGE: line " << lineNumber << ": " << messageString << "\n";
+    InjectedBundle::shared().os() << "CONSOLE MESSAGE: ";
+    if (lineNumber)
+        InjectedBundle::shared().os() << "line " << lineNumber << ": ";
+    InjectedBundle::shared().os() << messageString << "\n";
+
 }
 
 void InjectedBundlePage::willSetStatusbarText(WKStringRef statusbarText)
